--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "prisma-test",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -14,5 +13,14 @@
   },
   "dependencies": {
     "@prisma/client": "^2.18.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tricky-Ricky/Prisma-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Tricky-Ricky/Prisma-test/issues"
+  },
+  "homepage": "https://github.com/Tricky-Ricky/Prisma-test#readme",
+  "description": ""
 }
